feat: 新增用户配置与数据备份功能并优化消息处理
refactor(ImMessageServiceImpl): 优化消息未读计数和已读状态处理
feat(ImConversationMemberMapper): 新增未读消息数增减接口
feat(ImUserConfig): 新增用户配置实体及Mapper
feat(ImBackup): 新增数据备份实体及Mapper
fix(ImContactController): 修复URL解码异常处理
style: 移除无用AuditLogServiceImpl文件